--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,5 @@ toml = "0.5"
 mime_guess = "2.0"
 clap = { version = "3.2", features = ["derive"] }
 rcgen = "0.9"
+dashmap = "5.0"
+once_cell = "1.17"
